--- a/src/css/presencial/_sharedStyles.scss
+++ b/src/css/presencial/_sharedStyles.scss
@@ -11,6 +11,8 @@ $text-color: #34495e;
 $grey-dark: #7f8c8d;
 $background-light: #f8f9fa;
 $border-radius: 8px;
+$shadow-light: whitesmoke;
+$text-light: #576677;
 
 // Mixins
 @mixin step-container {
