agrego las ventas con multiple metodo de pago y con ingremento por intereses. ademas esta refinado el perfil de las mascotas

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -23,6 +23,7 @@
 @import './presencial/seleccionarProducto';
 @import './presencial/programarVencimientos';
 @import './presencial/metodoPago';
+@import './presencial/resumenVenta';
 @import './presencial/confirmarVenta';
 @import './adminClinica/linkUserModal';
 @import './adminClinica/tutorProfile';
