arreglo de errores

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -28,7 +28,7 @@
 @import './adminClinica/linkUserModal';
 @import './adminClinica/tutorProfile';
 @import './adminClinica/verTutores';
-@import './adminClinica/agenda';
+@import './adminClinica/agenda.scss';
 @import './adminClinica/pacienteProfile';
 @import './adminClinica/verPacientes';
 @import './adminClinica/monitorVencimientos';
